--- a/storemanagement.client/src/index.css
+++ b/storemanagement.client/src/index.css
@@ -25,3 +25,9 @@ main#admin {
 .invalid-feedback {
   width: auto!important;
 }
+
+.btn-outline-success.btn-momo-custom:hover {
+  background-color: #a50064;
+  border-color: #a50064; /* Đồng bộ màu viền */
+  color: white;           /* Đổi màu chữ chính thành trắng */
+}
